--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#services">Services</a>
                         </li>
-                        <li class="nav-item"></li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#about">About</a>
                         </li> 
                         <li class="nav-item">
